# cpp-pinyin

./: CMakeLists.txt
include/cpp-pinyin/: G2pglobal.h  Pinyin.h
res/dict/mandarin/: user_dict.txt
src/: G2pglobal.cpp  Pinyin.cpp  ToneConverter.cpp
src/toneUtil/: ManToneUtil.cpp
tests/: CMakeLists.txt  main.cpp
